# libdynamic

./: .gitignore  .travis.yml  CHANGES  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  README.rst  configure.ac  dynamic.h  libdynamic.pc.in  todo
.github/workflows/: c-cpp.yml
benchmark/: Makefile.am  README  dynamic_map.c  map.R  map.c  map.h  map2.R  map_custom.c  map_custom.h  map_dynamic.c  map_dynamic.h  map_dynamic_int.c  map_dynamic_int.h  map_libdynamic.c  map_libdynamic.h  map_libdynamic_subclass.c  map_libdynamic_subclass.h  map_std_unordered.cpp  map_std_unordered.h  map_subclass.c  map_subclass.h  map_unordered.cpp  map_unordered.h  unordered_map.cpp  vector.R  vector.c  vector.h  vector_dynamic.c  vector_dynamic.h  vector_stdlib.cpp  vector_stdlib.h
docs/: Makefile.am  apireference.rst  changes.rst  conf.py  gettingstarted.rst  index.rst
example/: Makefile.am  async.c  buffer.c  lists.c  map.c  mapi.c  pool.c  reverse.c  strings.c  vector.c
examples/: Makefile.am  async.c  list.c  map_str_ptr.c  map_str_ptr.h  mapi.c  maps.c  string_map.c
man/: vector.3
src/: buffer.c  buffer.h  compile  dynamic.h  io.c  map_int.c  map_int.h  map_pair.c  map_pair.h  map_str.c  mapi.c  string.c  string.h  test.c  vector.c  vector.h
src/dynamic/: buffer.c  buffer.h  cfarmhash.c  core.c  core.h  data.h  hash.c  hash.h  io.h  list.c  list.h  map.c  map.h  map_int.c  map_int.h  map_str.h  mapi.c  mapi.h  maps.c  maps.h  pool.c  pool.h  segment.c  segment.h  stream.c  stream.h  string.c  string.h  utility.c  utility.h  vector.c  vector.h
test/: buffer.c  cfarmhash.c  core.c  coverage.sh  data.c  hash.c  list.c  map.c  mapi.c  maps.c  mock.c  pool.c  segment.c  stream.c  string  string.c  test_buffer.c  test_coverage.sh  test_map_int.c  test_map_str.c  test_mapi.c  test_string.c  test_util.c  test_valgrind.sh  test_vector.c  tests.c  utility.c  valgrind.sh  vector.c
